added eb package configuration

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ venv
 
 **/migrations/*
 !__init__.py
+# Elastic Beanstalk Files
+#.elasticbeanstalk/*
+#!.elasticbeanstalk/*.cfg.yml
+#!.elasticbeanstalk/*.global.yml
